--- a/src/pages/CreatePassword/CreatePassword.css
+++ b/src/pages/CreatePassword/CreatePassword.css
@@ -40,7 +40,7 @@
 /* ====================================================
    RESPONSIVE QUERIES
 ==================================================== */
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 900px) {
   .create-pass-page {
     width: 100%;
     min-height: 100vh;
