--- a/src/pages/ForgotPassword/ForgotPassword.css
+++ b/src/pages/ForgotPassword/ForgotPassword.css
@@ -62,7 +62,7 @@
 /* ====================================================
    RESPONSIVE QUERIES
 ==================================================== */
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 900px) {
   .forgot-pass-page {
     width: 100%;
     min-height: 100vh;
