--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -830,7 +830,7 @@ a {
 
 
 
-@media (max-width: 1024px) {
+@media (max-width: 900px) {
   .hero-container {
     flex-direction: column;
     align-items: center;
