--- a/src/pages/VerifyEmail/VerifyEmail.css
+++ b/src/pages/VerifyEmail/VerifyEmail.css
@@ -109,7 +109,7 @@
 /* ====================================================
    RESPONSIVE QUERIES
 ==================================================== */
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 900px) {
   .verify-email-page {
     width: 100%;
     min-height: 100vh;
